@@ -1,135 +1,120 @@
 # Task Management Application (Design Patterns Final Project)
 
 ## Overview
-Java Swing desktop application implementing MVVM and multiple GoF / enterprise patterns over an embedded Apache Derby database.
+Java Swing MVVM desktop app persisting tasks in embedded Apache Derby while showcasing multiple GoF / enterprise patterns.
 
-## Key Implemented Patterns
-- Mandatory: Combinator (task filters), Visitor (report aggregation + record pattern matching)
-- Additional: Proxy (DAO caching), Singleton (DAO + task state instances), Observer (attribute + collection updates), Strategy (sorting), State (task lifecycle), Decorator (task feature augmentation), Adapter (CSV export), (Record + switch expressions in Visitor logic)
+## Implemented Patterns
+- Combinator (task filters)
+- Visitor (report aggregation + task record categorization)
+- Proxy (DAO caching layer)
+- Singleton (DAO + task state instances + attribute subject)
+- Observer (task attribute + collection change notifications)
+- Strategy (sorting options)
+- State (task lifecycle transitions)
+- Decorator (extensible task augmentation – placeholder hooks)
+- Adapter (CSV export)
+- Record + switch (pattern matching in reporting logic)
 
-## Project Structure
-Custom (non-standard Maven) layout intentionally kept as a single `src` root.
+## Source Layout (Intentionally Non-Standard Maven)
 ```
 src/
-  il/ac/hit/project/main/              -> Production code root
-    model/                             -> Domain, DAO, report, task patterns
-    view/                              -> Swing UI (View layer)
-    viewmodel/                         -> ViewModel, filters (Combinator), strategies
-    Main.java                          -> Entry point
-  il/ac/hit/project/test/              -> Test sources (JUnit 5)
-    model/ view/ viewmodel/            -> Parallel test packages
-myfonts/                               -> Optional PDF fonts (OpenSans)
-lib/                                   -> (If any manual jars; Maven handles managed deps)
-taskDB/                                -> Embedded Derby database files (runtime)
+  il/ac/hit/project/main/...   -> Production code (model, view, viewmodel, Main)
+  il/ac/hit/project/test/...   -> JUnit tests (marked as test root in pom)
+myfonts/                       -> Optional OpenSans fonts for PDF
+lib/                           -> (Not required at runtime; dependencies via Maven)
+taskDB/                        -> Derby data (runtime auto-created)
 ```
-Maven configuration excludes `il/ac/hit/project/test/**` from main compilation and treats it as test sources.
+Maven points testSourceDirectory to `src/il/ac/hit/project/test`; keep that path (do not move tests to `src/test/java`).
 
-## Build & Run
-Requirements: JDK 24+, Maven 3.9+.
+## Build / Run (With or Without System Maven)
+Prerequisites: JDK 24 (or 21+ if you downgrade `<maven.compiler.*>`), internet access for dependencies.
+
+If you have only IDE‑embedded Maven (IntelliJ): simply open the pom; use Maven tool window goals (clean, test, package). No global installation needed.
+
+CLI (if Maven installed):
 ```
-# Run full test suite
 mvn clean test
-
-# Build shaded (fat) jar
-mvn clean package
-
-# Skip tests (faster iteration)
 mvn -DskipTests package
-
-# Run application
 java -jar target/task-management-app-1.0.0-shaded.jar
 ```
-Main class: `il.ac.hit.project.main.Main` (stored in shaded manifest).
+Main class: `il.ac.hit.project.main.Main` (manifest configured in shaded JAR).
 
-## Runtime & Console Warnings (Expected / Benign)
-- SLF4J no provider: Add `slf4j-simple` or `logback-classic` if you want logging output; else ignore.
-- Derby shutdown (SQLState XJ015 / 08006): Thrown intentionally on successful embedded DB shutdown.
-- `sun.misc.Unsafe` deprecation (Byte Buddy / Guava): Informational on newer JDK; upgrade dependencies as they release updates.
-- Native load (Jansi via embedded Maven): Can be silenced with `--enable-native-access=ALL-UNNAMED` or disabled by `-Djansi.disable=true`.
+### Running from IDE
+1. Mark `src/il/ac/hit/project/test` as Test Sources (IntelliJ usually auto-detects from pom). If not: Right click folder > Mark Directory As > Test Sources Root. This prevents test code compiling with main, avoiding spurious errors when running Main.
+2. Run configuration main class: `il.ac.hit.project.main.Main`.
 
-## Domain & Architectural Highlights
-- MVVM separation: View (Swing) <-binds-> ViewModel <-mediates-> DAO/Model
-- Observer granularity: Attribute-level updates trigger efficient table refreshes.
-- State pattern: `ITaskState` singletons (ToDo/InProgress/Completed) controlling allowed transitions.
-- Strategy pattern: Pluggable sorting strategies (creation date, priority, etc.).
-- Combinator filters: Functional composition (search text, state predicates, custom AND/OR chains).
-- Visitor + Records: `ReportVisitor` builds immutable `TaskRecord` snapshots; switch expressions categorize tasks.
-- Proxy caching: `TasksDAOProxy` caches read sets until write invalidation (add/update/delete).
-- Decorator: Additional task behaviors layered without modifying core `Task` (e.g. priority tag / deadline reminder).
-- Adapter: `CsvReportAdapter` adapts a simulated external CSV library to unified export interface.
+## Key Modules
+- model.task: Task entity + State + Priority parsing resilience (`TaskPriority.fromDbValue` accepts enum name or legacy display name).
+- model.dao: Derby DAO (singleton) + Proxy caching decorator.
+- model.report: Visitor collecting `TaskRecord`s + friend style string report.
+- model.report.external: CSV Adapter + PDF writer.
+- viewmodel: MVVM mediator (filters, strategies, async executor, observer wiring).
+- view: Swing UI (table, controls, observer of ViewModel changes).
 
-## Reporting Features
-- In-app “Generate Report” friend-readable textual summary.
-- CSV export (Adapter pattern) with proper quoting/escaping (JUnit test coverage).
-- PDF export using PDFBox; groups tasks by state, counts + list sections. Optional OpenSans font usage (fallback Helvetica).
-
-## Testing (JUnit 5)
-Representative suites (green):
-- DAO: Derby CRUD + proxy caching
-- Reporting: CSV escaping, PDF smoke test, visitor categorization
-- Model: Task invariants, decorators
-- ViewModel: Filters (combinator), sorting (strategy), lifecycle transitions
-- View: Basic interaction smoke test (where feasible headful-safe)
-
-Run:
+## Task Priority Persistence NOTE
+Earlier snapshots may have stored priority as display names ("High", "Medium", "Low"). Current DAO stores canonical enum names ("HIGH", "MEDIUM", "LOW"). The helper `TaskPriority.fromDbValue` keeps both readable. If you still see errors like:
 ```
-mvn test
+IllegalArgumentException: No enum constant ... TaskPriority.High
 ```
-Reports: `target/surefire-reports/` (TXT + XML).
+You are loading data through a path that bypasses `fromDbValue`, or your DB predates the helper. Fix options:
+- Quick: Delete the `taskDB/` directory (app closed) -> restart app (schema + data recreated cleanly).
+- Manual: Update existing rows: `UPDATE tasks SET priority = UPPER(priority);`
+Tests already use the hydrated path; if you still get the exception, ensure you cleaned `target/test-derby-home/` before re‑running tests.
 
-## Dependencies (Core)
-- Apache Derby (embedded DB)
-- PDFBox (report PDF generation)
-- JUnit Jupiter, Mockito, Awaitility (tests only)
-- Byte Buddy (transitive via Mockito; pinned for Java 24 compatibility)
+## Reporting
+- Friend-style text report (Visitor) displayed in UI.
+- CSV export (Adapter) with proper quoting (see escaping test).
+- PDF export (PDFBox 3.x). Drop OpenSans fonts into `myfonts/` (already present) for consistent typography.
 
-## Common Tasks
-| Goal | Command / Notes |
-|------|-----------------|
-| Clean + test | `mvn clean test` |
-| Build fast (skip tests) | `mvn -DskipTests package` |
-| Run app | `java -jar target/task-management-app-1.0.0-shaded.jar` |
-| Regenerate DB schema | Delete `taskDB/` (while app stopped) then rerun app (auto-create) |
-| View test reports | Open `target/surefire-reports` |
+## Tests (JUnit 5)
+Run: `mvn test` (Surefire includes `**/*Test.java`). Derby tests use isolated home: `target/test-derby-home/`.
+
+## Common Commands
+| Action | Command |
+|--------|---------|
+| Full verify | mvn clean test |
+| Fast build (skip tests) | mvn -DskipTests package |
+| Run app | java -jar target/task-management-app-1.0.0-shaded.jar |
+| Regenerate DB | Stop app, delete `taskDB/`, restart |
+| View test reports | Open `target/surefire-reports/` |
 
 ## Troubleshooting
-| Symptom | Explanation / Fix |
-|---------|-------------------|
-| SLF4J no-provider warning | Add logging binding or ignore |
-| Derby shutdown exception at exit | Normal successful shutdown |
-| Unsafe deprecation warnings | Harmless on current JDK; update libs later |
-| Table already exists error (X0Y32) | Harmless — schema already created |
-| Fonts missing in PDF | Fallback Helvetica used automatically |
+| Symptom | Cause / Fix |
+|---------|------------|
+| 100+ compile errors referencing test packages when running Main | Test folder not marked as Test Sources; mark it so IDE excludes from main build |
+| IllegalArgumentException TaskPriority.High | Legacy rows; delete `taskDB/` or migrate priorities to uppercase; ensure path uses `fromDbValue` |
+| Table already exists (SQLState X0Y32) | Normal on startup when schema present (ignore) |
+| Derby shutdown SQLState 08006 | Indicates successful embedded shutdown (expected) |
+| SLF4J no binding warning | Add a binding (e.g., slf4j-simple) or ignore |
+| Stale test DB data | Delete `target/test-derby-home/` before rerun |
 
-## Extending
-- Add new filter: implement `TaskFilter` lambda and compose via `TaskFilters.and(...)`.
-- Add new sort: implement `Comparator<Task>` strategy and register with ViewModel.
-- Add export format: implement a new adapter matching existing exporter interface.
-- Add decorator: extend `TaskDecorator` and wrap tasks where feature is needed.
+## Extensibility
+- New filter: compose via `TaskFilters` (Combinator pattern).
+- New sorting: implement `SortingStrategy` & add enum in `SortingOption`.
+- New export format: implement `ReportExporter` adapter.
+- Decorator hooks: wrap `Task` with added behavior (e.g., SLA reminders) before insertion.
 
-## Database Notes
-- Embedded Derby files under `taskDB/`; do not modify manually.
-- Tests isolate DB under `target/test-derby-home/` to avoid locking production folder.
+## Concurrency & Observers
+- Single fixed thread pool (ViewModel) for async DAO operations.
+- Attribute-level observer notifications keep UI refresh granular.
+- Shutdown hook stops executor + shuts Derby (expected benign SQLState 08006).
 
-## Packaging & Distribution
-The shaded JAR contains all runtime dependencies except the JDK. No external configuration required; DB created on first run.
+## Dependency Notes
+Some test libraries are marked `compile` scope for simplicity in this single-root layout; they are only referenced from the test source subtree. Adjust to `<scope>test</scope>` if you later adopt a conventional two-root structure.
 
-## License / Attribution
-- PDFBox & dependencies: Apache License 2.0
-- Any fonts (OpenSans) subject to their respective licenses (see `myfonts/README.txt`).
+## Clean Reset Checklist
+1. Close the app.
+2. Delete `taskDB/` and `target/`.
+3. `mvn clean test`.
+4. Run shaded JAR or Main class.
 
-## Change Log (Recent)
-- Consolidated sources under single `src` root with Maven exclusion for tests
-- Migrated all tests to pure JUnit 5 (removed TestNG)
-- Added CSV escaping test and PDF smoke validation
-- Refined shade plugin filters to reduce overlapping resource warnings
-- Clarified reporting and pattern mapping in docs
+## Future (Optional)
+- Add structured logging (SLF4J + Logback)
+- Persist user preferences
+- Rich PDF tables & styling
+- Swing UI tests (AssertJ Swing) in headless mode
 
-## Future Enhancements (Optional)
-- Introduce SLF4J + Logback for structured logging
-- Add configurable user preferences (persistence layer abstraction)
-- Headless-friendly UI interaction tests via Robot / AssertJ Swing (if needed)
-- Rich PDF styling (tables, colors) with caching of fonts
-
----
-Maintainer quick start: `mvn clean package && java -jar target/task-management-app-1.0.0-shaded.jar`.
+Maintainer quick start:
+```
+mvn clean package && java -jar target/task-management-app-1.0.0-shaded.jar
+```
